src/mod_fdajax_parser.c
#line 1 "mod_fdajax_parser.rl"
#include <stdio.h>
#include <string.h>
#include <stdlib.h>

#include "mod_fdajax_defs.h"

#define INIT_EVENT(mask, index) req->ev.count++; req->ev.types |= mask; cur_ev_nr = index; req->ev.ids_len[index] = 0
#define CUR_ID_TAB_LEN req->ev.ids_len[cur_ev_nr]

#line 155 "mod_fdajax_parser.rl"



#line 16 "mod_fdajax_parser.c"
static const int fdamod_parser_start = 1;
static const int fdamod_parser_first_final = 399;
static const int fdamod_parser_error = 0;

static const int fdamod_parser_en_main = 1;

#line 158 "mod_fdajax_parser.rl"

int mod_fdajax_pinit(user_request_p req)
{
    int cs = 0;
    
#line 29 "mod_fdajax_parser.c"
	{
	cs = fdamod_parser_start;
	}
#line 163 "mod_fdajax_parser.rl"
    req->cs = cs;
    req->cmd =              0;
    req->ev.types =         0;
    req->ev.count =         0;
    req->tv.tv_sec =        0;
    req->tv.tv_usec =       0;
    req->win_id =           0;
    req->win_st =           0;
    req->www_id =           0;
    req->alert_id =         0;
    req->amode =            0;
    req->force_old_close =  0;
    req->user_id =          0;
    req->peer_id =          0;
    req->ipaddr.s_addr =    INADDR_NONE;
    req->mes =              NULL;
    req->req_sess_id =      NULL;
    req->sess_id_cookie[0] = 0;
    req->admin_passwd[0]   = 0;
    return 1;
}

int mod_fdajax_pexec(user_request_p req, char *start, size_t len)
{
    char *p, *pe, *mark = 0, *buf = 0;
    unsigned char phex = 0, hex = 0;
    unsigned int cur_int = 0;
    unsigned int ip_addr = 0;
    size_t j, *ppos = 0;
    int cur_ev_nr = 0;
    int cs = req->cs;

    assert(*(start + len) == 0);
    p = start;
    pe = start + len + 1;
    
#line 70 "mod_fdajax_parser.c"
	{
	if ( p == pe )
		goto _out;
	switch ( cs )
	{
tr31:
#line 139 "mod_fdajax_parser.rl"
	{
      if (req->admin_passwd[0]) {
          goto _out1;
      }
      j = min(p - mark, PASSWORD_MAX - 1);
      strncpy(req->admin_passwd, mark, j);
      req->admin_passwd[j] = 0;
  }
	goto st1;
tr42:
#line 21 "mod_fdajax_parser.rl"
	{ req->alert_id = cur_int; }
	goto st1;
tr58:
#line 22 "mod_fdajax_parser.rl"
	{ req->amode = cur_int; }
	goto st1;
tr88:
#line 34 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_addchat; }
	goto st1;
tr93:
#line 27 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_alert; }
	goto st1;
tr101:
#line 29 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_cancel; }
	goto st1;
tr110:
#line 36 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_chatsig; }
	goto st1;
tr114:
#line 30 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_check_user; }
	goto st1;
tr119:
#line 33 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_info; }
	goto st1;
tr126:
#line 31 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_login; }
	goto st1;
tr130:
#line 32 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_logout; }
	goto st1;
tr135:
#line 26 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_push; }
	goto st1;
tr143:
#line 35 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_rmchat; }
	goto st1;
tr150:
#line 28 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_stream; }
	goto st1;
tr155:
#line 25 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_wait; }
	goto st1;
tr163:
#line 23 "mod_fdajax_parser.rl"
	{ req->force_old_close = cur_int; }
	goto st1;
tr191:
#line 88 "mod_fdajax_parser.rl"
	{ if (0xff < cur_int) goto _out1; ip_addr = ip_addr | (cur_int << 0);
                             req->ipaddr.s_addr = ip_addr; ip_addr = 0; }
	goto st1;
tr234:
#line 115 "mod_fdajax_parser.rl"
	{
      buf[(*ppos)++] = 0;
  }
	goto st1;
tr245:
#line 105 "mod_fdajax_parser.rl"
	{
      hex = hex | phex;
      buf[(*ppos)++] = hex;
  }
#line 115 "mod_fdajax_parser.rl"
	{
      buf[(*ppos)++] = 0;
  }
	goto st1;
tr256:
#line 16 "mod_fdajax_parser.rl"
	{ req->peer_id = cur_int; }
	goto st1;
tr272:
#line 19 "mod_fdajax_parser.rl"
	{ req->tv.tv_sec = cur_int; }
	goto st1;
tr289:
#line 130 "mod_fdajax_parser.rl"
	{
      if (req->req_sess_id) {
          goto _out1;
      }
      req->req_sess_id = buffer_init();
      buffer_copy_string_len(req->req_sess_id, mark, p - mark);
  }
	goto st1;
tr315:
#line 67 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_ANSW, FDA_GRP_ANSW_INDEX); }
	goto st1;
tr323:
#line 58 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_CCD, FDA_EV_CCD_INDEX); }
	goto st1;
tr331:
#line 38 "mod_fdajax_parser.rl"
	{
      if (CUR_ID_TAB_LEN < FDA_IDS_MAX) {
          req->ev.ids[cur_ev_nr][CUR_ID_TAB_LEN++] = cur_int;
      } else {
          CUR_ID_TAB_LEN = 0;
      }
  }
	goto st1;
tr347:
#line 48 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_CHAT, FDA_EV_CHAT_INDEX); }
	goto st1;
tr356:
#line 74 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_FEED, FDA_GRP_FEED_INDEX); }
	goto st1;
tr362:
#line 78 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_FRID, FDA_GRP_FRID_INDEX); }
	goto st1;
tr371:
#line 65 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_CHAT, FDA_GRP_CHAT_INDEX); }
	goto st1;
tr378:
#line 73 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_GEIC, FDA_GRP_GEIC_INDEX); }
	goto st1;
tr382:
#line 47 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_GEN, FDA_EV_GEN_INDEX); }
	goto st1;
tr391:
#line 79 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_INFO, FDA_GRP_INFO_INDEX); }
	goto st1;
tr396:
#line 59 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_ITM, FDA_EV_ITM_INDEX); }
	goto st1;
tr403:
#line 60 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_LNE, FDA_EV_LNE_INDEX); }
	goto st1;
tr412:
#line 64 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_MAIN, FDA_GRP_MAIN_INDEX); }
	goto st1;
tr417:
#line 56 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_MES, FDA_EV_MES_INDEX); }
	goto st1;
tr423:
#line 75 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_MESE, FDA_GRP_MESE_INDEX); }
	goto st1;
tr430:
#line 76 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_NETK, FDA_GRP_NETK_INDEX); }
	goto st1;
tr439:
#line 68 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_OFRS, FDA_GRP_OFRS_INDEX); }
	goto st1;
tr445:
#line 70 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_OPIN, FDA_GRP_OPIN_INDEX); }
	goto st1;
tr450:
#line 57 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_ORD, FDA_EV_ORD_INDEX); }
	goto st1;
tr456:
#line 72 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_ORDS, FDA_GRP_ORDS_INDEX); }
	goto st1;
tr463:
#line 69 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_PRIC, FDA_GRP_PRIC_INDEX); }
	goto st1;
tr470:
#line 66 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_QUES, FDA_GRP_QUES_INDEX); }
	goto st1;
tr479:
#line 55 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SHC, FDA_EV_SHC_INDEX); }
	goto st1;
tr484:
#line 53 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SHO, FDA_EV_SHO_INDEX); }
	goto st1;
tr489:
#line 54 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SHS, FDA_EV_SHS_INDEX); }
	goto st1;
tr496:
#line 51 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SUO, FDA_EV_SUO_INDEX); }
	goto st1;
tr501:
#line 52 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SUS, FDA_EV_SUS_INDEX); }
	goto st1;
tr511:
#line 77 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_TASK, FDA_GRP_TASK_INDEX); }
	goto st1;
tr516:
#line 49 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_TOQ, FDA_EV_TOQ_INDEX); }
	goto st1;
tr522:
#line 50 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_TWP, FDA_EV_TWP_INDEX); }
	goto st1;
tr530:
#line 46 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_UNW, FDA_EV_UNW_INDEX); }
	goto st1;
tr539:
#line 71 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_USER, FDA_GRP_USER_INDEX); }
	goto st1;
tr543:
#line 61 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_USR, FDA_EV_USR_INDEX); }
	goto st1;
tr553:
#line 20 "mod_fdajax_parser.rl"
	{ req->tv.tv_usec = cur_int; }
	goto st1;
tr569:
#line 15 "mod_fdajax_parser.rl"
	{ req->user_id = cur_int; }
	goto st1;
tr588:
#line 17 "mod_fdajax_parser.rl"
	{ req->win_id = cur_int; }
	goto st1;
tr602:
#line 18 "mod_fdajax_parser.rl"
	{ req->win_st = cur_int; }
	goto st1;
st1:
	if ( ++p == pe )
		goto _out1;
case 1:
#line 345 "mod_fdajax_parser.c"
	switch( (*p) ) {
		case 95: goto st2;
		case 97: goto st4;
		case 99: goto st51;
		case 102: goto st116;
		case 105: goto st132;
		case 109: goto st183;
		case 112: goto st191;
		case 115: goto st209;
		case 116: goto st230;
		case 117: goto st339;
		case 119: goto st369;
	}
	goto st0;
st0:
	goto _out0;
st2:
	if ( ++p == pe )
		goto _out2;
case 2:
	if ( (*p) == 61 )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _out3;
case 3:
	switch( (*p) ) {
		case 0: goto st399;
		case 38: goto st1;
	}
	goto st0;
tr30:
#line 139 "mod_fdajax_parser.rl"
	{
      if (req->admin_passwd[0]) {
          goto _out399;
      }
      j = min(p - mark, PASSWORD_MAX - 1);
      strncpy(req->admin_passwd, mark, j);
      req->admin_passwd[j] = 0;
  }
	goto st399;
tr41:
#line 21 "mod_fdajax_parser.rl"
	{ req->alert_id = cur_int; }
	goto st399;
tr57:
#line 22 "mod_fdajax_parser.rl"
	{ req->amode = cur_int; }
	goto st399;
tr87:
#line 34 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_addchat; }
	goto st399;
tr92:
#line 27 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_alert; }
	goto st399;
tr100:
#line 29 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_cancel; }
	goto st399;
tr109:
#line 36 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_chatsig; }
	goto st399;
tr113:
#line 30 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_check_user; }
	goto st399;
tr118:
#line 33 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_info; }
	goto st399;
tr125:
#line 31 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_login; }
	goto st399;
tr129:
#line 32 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_logout; }
	goto st399;
tr134:
#line 26 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_push; }
	goto st399;
tr142:
#line 35 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_rmchat; }
	goto st399;
tr149:
#line 28 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_stream; }
	goto st399;
tr154:
#line 25 "mod_fdajax_parser.rl"
	{ req->cmd = cmd_wait; }
	goto st399;
tr162:
#line 23 "mod_fdajax_parser.rl"
	{ req->force_old_close = cur_int; }
	goto st399;
tr190:
#line 88 "mod_fdajax_parser.rl"
	{ if (0xff < cur_int) goto _out399; ip_addr = ip_addr | (cur_int << 0);
                             req->ipaddr.s_addr = ip_addr; ip_addr = 0; }
	goto st399;
tr232:
#line 115 "mod_fdajax_parser.rl"
	{
      buf[(*ppos)++] = 0;
  }
	goto st399;
tr243:
#line 105 "mod_fdajax_parser.rl"
	{
      hex = hex | phex;
      buf[(*ppos)++] = hex;
  }
#line 115 "mod_fdajax_parser.rl"
	{
      buf[(*ppos)++] = 0;
  }
	goto st399;
tr255:
#line 16 "mod_fdajax_parser.rl"
	{ req->peer_id = cur_int; }
	goto st399;
tr271:
#line 19 "mod_fdajax_parser.rl"
	{ req->tv.tv_sec = cur_int; }
	goto st399;
tr288:
#line 130 "mod_fdajax_parser.rl"
	{
      if (req->req_sess_id) {
          goto _out399;
      }
      req->req_sess_id = buffer_init();
      buffer_copy_string_len(req->req_sess_id, mark, p - mark);
  }
	goto st399;
tr313:
#line 67 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_ANSW, FDA_GRP_ANSW_INDEX); }
	goto st399;
tr321:
#line 58 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_CCD, FDA_EV_CCD_INDEX); }
	goto st399;
tr329:
#line 38 "mod_fdajax_parser.rl"
	{
      if (CUR_ID_TAB_LEN < FDA_IDS_MAX) {
          req->ev.ids[cur_ev_nr][CUR_ID_TAB_LEN++] = cur_int;
      } else {
          CUR_ID_TAB_LEN = 0;
      }
  }
	goto st399;
tr345:
#line 48 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_CHAT, FDA_EV_CHAT_INDEX); }
	goto st399;
tr354:
#line 74 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_FEED, FDA_GRP_FEED_INDEX); }
	goto st399;
tr360:
#line 78 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_FRID, FDA_GRP_FRID_INDEX); }
	goto st399;
tr369:
#line 65 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_CHAT, FDA_GRP_CHAT_INDEX); }
	goto st399;
tr376:
#line 73 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_GEIC, FDA_GRP_GEIC_INDEX); }
	goto st399;
tr380:
#line 47 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_GEN, FDA_EV_GEN_INDEX); }
	goto st399;
tr389:
#line 79 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_INFO, FDA_GRP_INFO_INDEX); }
	goto st399;
tr394:
#line 59 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_ITM, FDA_EV_ITM_INDEX); }
	goto st399;
tr401:
#line 60 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_LNE, FDA_EV_LNE_INDEX); }
	goto st399;
tr410:
#line 64 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_MAIN, FDA_GRP_MAIN_INDEX); }
	goto st399;
tr415:
#line 56 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_MES, FDA_EV_MES_INDEX); }
	goto st399;
tr421:
#line 75 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_MESE, FDA_GRP_MESE_INDEX); }
	goto st399;
tr428:
#line 76 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_NETK, FDA_GRP_NETK_INDEX); }
	goto st399;
tr437:
#line 68 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_OFRS, FDA_GRP_OFRS_INDEX); }
	goto st399;
tr443:
#line 70 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_OPIN, FDA_GRP_OPIN_INDEX); }
	goto st399;
tr448:
#line 57 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_ORD, FDA_EV_ORD_INDEX); }
	goto st399;
tr454:
#line 72 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_ORDS, FDA_GRP_ORDS_INDEX); }
	goto st399;
tr461:
#line 69 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_PRIC, FDA_GRP_PRIC_INDEX); }
	goto st399;
tr468:
#line 66 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_QUES, FDA_GRP_QUES_INDEX); }
	goto st399;
tr477:
#line 55 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SHC, FDA_EV_SHC_INDEX); }
	goto st399;
tr482:
#line 53 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SHO, FDA_EV_SHO_INDEX); }
	goto st399;
tr487:
#line 54 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SHS, FDA_EV_SHS_INDEX); }
	goto st399;
tr494:
#line 51 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SUO, FDA_EV_SUO_INDEX); }
	goto st399;
tr499:
#line 52 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_SUS, FDA_EV_SUS_INDEX); }
	goto st399;
tr509:
#line 77 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_TASK, FDA_GRP_TASK_INDEX); }
	goto st399;
tr514:
#line 49 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_TOQ, FDA_EV_TOQ_INDEX); }
	goto st399;
tr520:
#line 50 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_TWP, FDA_EV_TWP_INDEX); }
	goto st399;
tr528:
#line 46 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_UNW, FDA_EV_UNW_INDEX); }
	goto st399;
tr537:
#line 71 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_GRP_USER, FDA_GRP_USER_INDEX); }
	goto st399;
tr541:
#line 61 "mod_fdajax_parser.rl"
	{ INIT_EVENT(FDA_EV_USR, FDA_EV_USR_INDEX); }
	goto st399;
tr552:
#line 20 "mod_fdajax_parser.rl"
	{ req->tv.tv_usec = cur_int; }
	goto st399;
tr568:
#line 15 "mod_fdajax_parser.rl"
	{ req->user_id = cur_int; }
	goto st399;
tr587:
#line 17 "mod_fdajax_parser.rl"
	{ req->win_id = cur_int; }
	goto st399;
tr601:
#line 18 "mod_fdajax_parser.rl"
	{ req->win_st = cur_int; }
	goto st399;
st399:
	if ( ++p == pe )
		goto _out399;
case 399:
#line 647 "mod_fdajax_parser.c"
	goto st0;
st4:
	if ( ++p == pe )
		goto _out4;
case 4:
	switch( (*p) ) {
		case 100: goto st5;
		case 108: goto st18;
		case 109: goto st36;
	}
	goto st0;
st5:
	if ( ++p == pe )
		goto _out5;
case 5:
	if ( (*p) == 109 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _out6;
case 6:
	if ( (*p) == 105 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _out7;
case 7:
	if ( (*p) == 110 )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _out8;
case 8:
	if ( (*p) == 95 )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _out9;
case 9:
	if ( (*p) == 112 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _out10;
case 10:
	if ( (*p) == 97 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _out11;
case 11:
	if ( (*p) == 115 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _out12;
case 12:
	if ( (*p) == 115 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _out13;
case 13:
	if ( (*p) == 119 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _out14;
case 14:
	if ( (*p) == 100 )
		goto st15;
	goto st0;
st15:
	if ( ++p == pe )
		goto _out15;
case 15:
	if ( (*p) == 61 )
		goto st16;
	goto st0;
st16:
	if ( ++p == pe )
		goto _out16;
case 16:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr29;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
